--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: My Website
+title: Heng's Website
 
 # Your name to show in the footer
-author: Some Person
+author: Heng Zhang
 
 # --- List of links in the navigation bar --- #
 
